# kanban-v2

./: README.md
kanban-v2-server/: Cargo.toml
kanban-v2-server/src/: auth.rs  boards.rs  helper.rs  main.rs  rbac.rs  schema.sql  task_columns.rs  tasks.rs
